# stock-screener

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: tw_run.yml  us_run.yml  youtube_digest.yml
data/: analyst_target_events.jsonl  latest_signals.json  market_sentiment_overrides.json  sector_map.csv  tw_target_events.jsonl  watchlist.csv
data/youtube_digest/: latest.json  latest.md  state.json
docs/: ARCHITECTURE.md  DATA_CONTRACTS.md  OPERATIONS.md
results/backtests/: backtest_registry.jsonl  gap_event_study.csv  gap_exposure_index.csv  gap_fastfill_exit.csv  ma5_penalty_oos_bull.csv  ma5_penalty_sweep.csv  regime_gated_entry.csv  tw_bear_2020_weight_sweep.csv  us_bear_split_focused.csv  (+22 more)
screener/: chip.py  cnyes.py  fetch.py  indicators.py  intraday_volume.py  io.py  market_regime.py  run.py  score.py  sectors.py  youtube_digest.py
scripts/: backtest_gap_event_study.py  backtest_gap_exposure.py  backtest_gap_fastfill_exit.py  backtest_ma5_penalty_sweep.py  backtest_regime_gated_entry.py  backtest_tw_bear_defense.py  backtest_tw_exit_strategy.py  backtest_tw_revenue_yoy.py  backtest_tw_strategy.py  backtest_us_bear_defense.py  backtest_us_bear_split.py  backtest_us_exit_strategy.py  backtest_us_strategy.py  build_sector_map.py  fetch_tw_month_revenue.py
tests/: test_chip.py  test_cnyes.py  test_fetch.py  test_indicators.py  test_intraday_volume.py  test_market_regime.py  test_run_mode.py  test_score.py  test_sectors.py  test_streamlit_app.py  test_target_events_io.py  test_youtube_digest.py
