[project]
name = "stock-screener"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "finnhub-python>=2.4.28",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.32.0",
    "streamlit>=1.57.0",
    "streamlit-javascript>=0.1.5",
    "tenacity>=9.1.4",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
